Got the dumb client working.

--- a/web-client/src/WebClient.css
+++ b/web-client/src/WebClient.css
@@ -1,9 +1,9 @@
-.navbar {
-  margin-bottom: 20px;
-}
-
 .navbar-brand {
   color: white;
+}
+
+.notebook-container {
+  margin-top: 80px;
 }
 
 div.row {
