Made the images white in the mnist-css notebook, which was awesome.

--- a/shared/client/src/elements/ImageList.css
+++ b/shared/client/src/elements/ImageList.css
@@ -4,7 +4,7 @@
 }
 
 .printf-container .image-container img {
-  border: 1px solid black;
+  border: 1px solid #eee;
 }
 
 .printf-container .caption {
