--- a/shared/client/src/elements/Div.css
+++ b/shared/client/src/elements/Div.css
@@ -1,4 +1,4 @@
-.printf-container .fixed-width {
+.streamlit-container .fixed-width {
   font-family: "Roboto Mono", monospace;
   white-space: pre-wrap;
 }
