--- a/shared/client/src/elements/DataFrame.css
+++ b/shared/client/src/elements/DataFrame.css
@@ -1,50 +1,29 @@
-.streamlit-container {
-  /* Some custom variables we will use throughout the dataframe. */
-  --background-color-data-light: white;
-  --background-color-data-dark: rgb(245, 245, 247);
-  --background-color-header-light: rgb(50, 50, 50);
-  --background-color-header-dark: rgb(45, 45, 45);
+.streamlit-container .dataframe {
+  font-size: 0.8rem;
+  font-family: 'IBM Plex Mono', monospace;
+  text-align: right;
+  padding: 0.5rem;
 }
 
 .streamlit-container .dataframe-container {
-  box-shadow: inset 0px 0px 5px 1px rgba(0,0,0,0.45);
-}
-
-.streamlit-container .dataframe {
-  font-size: 10pt;
-  font-family: "Roboto Mono", monospace;
-  text-align: right;
-  padding: 3px 6px 0px 0px;
-  /* border: 1px solid red; */
+  border: 1px solid #E6E9EE;
 }
 
 .streamlit-container .dataframe.row-header {
-  background-color: var(--background-color-header-dark);
-  color: #ccc;
+  color: #F63366;
+  color: #768096;
   z-index: 1;
 }
 
-.streamlit-container .dataframe.col-header,.dataframe.corner {
-  background-color: var(--background-color-header-dark);
-  color: #ccc;
+.streamlit-container .dataframe.col-header,
+.dataframe.corner {
+  color: #F63366;
+  color: #768096;
   z-index: 1;
-}
-
-.streamlit-container .dataframe.data.even {
-  background-color: var(--background-color-data-dark);
-}
-
-.streamlit-container .dataframe.data.odd {
-  background-color: var(--background-color-data-light);
-}
-
-.streamlit-container .dataframe.col-header.odd {
-  background-color: var(--background-color-header-light);
 }
 
 .streamlit-container .fixup {
   position: absolute;
-  background-color: var(--background-color-header-dark);
 }
 
 .streamlit-container .fixup-top-right {
