--- a/local/client/src/WebClient.css
+++ b/local/client/src/WebClient.css
@@ -1,9 +1,8 @@
 /**
  * Palette:
- * - Dark charcoal: #101620
- * - Medium charcoal: #364056
- * - Light charcoal: #768096
- * - Light cloud: #E6E9EE
+ * - Black: #101620
+ * - Gray: #768096
+ * - Light gray: #E6E9EE
  * - Accent red: #F63366
  * - Accent yellow: #FFFD80
  */
