Add margin to <p> inside markdown

--- a/shared/client/src/elements/Text.css
+++ b/shared/client/src/elements/Text.css
@@ -3,7 +3,7 @@
 }
 
 .streamlit-container .markdown-text-container p {
-  margin: 0;
+  margin: 0 0 1rem 0;
 }
 
 .streamlit-container .markdown-text-container code {
