Got io.write working properly.

--- a/shared/client/src/elements/DocString.css
+++ b/shared/client/src/elements/DocString.css
@@ -1,6 +1,6 @@
 .streamlit-container .doc-containter {
-  background-color: #eeeeee;
-  padding: 10px;
+  background-color: #F0F3F9;
+  padding: 1rem;
   /* font-family: 'IBM Plex Mono', monospace; */
 }
 
