Make docstrings look nicer. Includes indentation removal.

--- a/shared/client/src/elements/DocString.css
+++ b/shared/client/src/elements/DocString.css
@@ -2,10 +2,13 @@
   background-color: #F0F3F9;
   padding: 0.5rem 1rem;
   font-family: 'IBM Plex Mono', monospace;
+  font-size: 0.8rem;
 }
 
 .streamlit-container .doc-header {
+  padding-bottom: 0.5rem;
   margin-bottom: 0.5rem;
+  border-bottom: 1px solid #E6E9EF;
 }
 
 .streamlit-container .doc-module {
@@ -18,5 +21,10 @@
 
 .streamlit-container .doc-containter .doc-string {
   white-space: pre-wrap;
-  font-size: 0.8rem;
+}
+
+@media (max-width: 768px) {
+  .streamlit-container .doc-containter {
+    font-size: 0.6rem;
+  }
 }
