Moved Connection object to use register / unregister methods.

--- a/shared/client/src/elements/Text.css
+++ b/shared/client/src/elements/Text.css
@@ -5,7 +5,8 @@
 }
 
 .streamlit-container .markdown-text-container {
-  font-family: 'IBM Plex Serif', serif;
+  font-family: 'IBM Plex Sans', sans-serif;
+  /* font-family: 'IBM Plex Serif', serif; */
   margin-bottom: -1rem;
 }
 
