--- a/shared/client/src/elements/ExceptionElement.css
+++ b/shared/client/src/elements/ExceptionElement.css
@@ -4,11 +4,11 @@
   padding: 0.5rem 1rem;*/
 }
 
-.streamlit-container .exception .type {
+.streamlit-container .exception .message {
   /* padding-bottom: 0.5rem; */
   margin-bottom: 0.5rem;
   /* border-bottom: 1px solid #E6E9EF; */
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 
 .streamlit-container .exception .stack-trace {
