--- a/local/client/src/WebClient.css
+++ b/local/client/src/WebClient.css
@@ -49,14 +49,14 @@ h2, .h2 {
   margin: 3rem 0 0 0;
 }
 
-h3, .h3 {
+/* h3, .h3 {
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 700;
   font-size: 1.5rem;
   margin: 1rem 0 0 0;
-}
+} */
 
-h4, .h4 {
+h3, .h3 {
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 500;
   font-size: 1.25rem;
