Make top-right buttons and upload dialog prettier.

--- a/frontend/src/WebClient.css
+++ b/frontend/src/WebClient.css
@@ -102,10 +102,88 @@ a.brand:hover {
   color: #F63366;
 }
 
-.connection-status {
+.btn {
+  border-radius: 0.75rem;
+}
+
+.btn-primary {
+  background-color: transparent;
+  border-color: #E6E9EF;
+  color: #101620;
+}
+
+.btn:hover {
+  background-color: transparent;
+  color: #F63366;
+  border-color: #F63366;
+}
+
+/* This is how bootstrap sets colors on secondary buttons.
+ * Need to find a better way to override colors. Install SASS? */
+.btn-secondary:not([disabled]):not(.disabled):active,
+.btn-secondary:not([disabled]):not(.disabled).active,
+.show > .btn-secondary.dropdown-toggle {
+  background-color: #F63366;
+  color: #101620;
+  border-color: #F63366;
+}
+
+.btn-secondary {
+  background-color: transparent;
+  color: #101620;
+  border-color: transparent;
+}
+
+.streamlit-main-menu {
   position: absolute;
   top: 0.5rem;
   right: 1rem;
+  display: flex;
+  flex-direction: row;
+}
+
+.streamlit-main-menu-item {
+  width: 1.75rem;
+  height: 1.75rem;
+  padding: 0;
+  margin: 0 0 0 0.5rem;
+  border-radius: 0.8rem;
+  border: 1px solid transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.streamlit-main-menu-item:last-child {
+  margin-right: -0.25rem;
+}
+
+.streamlit-main-menu-item:hover {
+  background: #E6E9EF;
+}
+
+.streamlit-main-menu-item:focus {
+  outline: none;
+  /* TODO: Find good way to add focus back, for a11y.
+   * This here is just for a demo. */
+}
+
+.streamlit-main-menu-item:active {
+  background: #F63366;
+  opacity: 1.0;
+}
+
+.streamlit-main-menu-item > svg {
+  width: 0.9rem;
+  height: 0.9rem;
+}
+
+.streamlit-main-menu-item:hover {
+}
+
+.streamlit-main-menu-item:hover * {
 }
 
 .streamlit-container {
