--- a/frontend/src/ConnectionStatus.css
+++ b/frontend/src/ConnectionStatus.css
@@ -9,8 +9,23 @@
   text-transform: uppercase;
   color: #768096;
   margin: 0 1.25rem 0 0.5rem;
+  white-space: nowrap;
+  max-width: 20rem;
+  transition:
+      opacity 500ms 0ms,
+      clip 500ms 0ms,
+      max-width 500ms 0ms,
+      margin 500ms 0ms,
+      visibility 0ms 500ms;
 }
 
 #ConnectionStatus svg * {
   fill: #768096;
+}
+
+#ConnectionStatus.minimized label {
+  opacity: 0;
+  visibility: hidden;
+  margin-right: 0rem;
+  max-width: 0;
 }
