Added a NewConnection message to indicate properties of the connection.

--- a/frontend/src/elements/ImageList.css
+++ b/frontend/src/elements/ImageList.css
@@ -4,7 +4,7 @@
 }
 
 .streamlit-container .image-container img {
-  border: 1px solid #eee;
+  border: 1px solid #E6E9EE;
 }
 
 .streamlit-container .caption {
