[site] Change background to cave, remove tagline, fix email address.

--- a/site/layouts/partials/contact.html
+++ b/site/layouts/partials/contact.html
@@ -3,7 +3,7 @@
     <h2>Contact</h2>
     <p>
       Want to know more? Drop us a note at
-      <a target="_blank" href="mailto:contact@streamlit.io">contact@streamlit.io</a>
+      <a target="_blank" href="mailto:contact@streamlit.io">hello@streamlit.io</a>
     </p>
   </div>
 </section>
