--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,21 +1,7 @@
 {{ define "main" }}
 <main>
   <header class="parallax">
-    <h1>{{ .Site.Title }}</h1>
-    <div id="lede">Magical data science</div>
-
-    {{/* TODO: Configure site menu.
-
-    {{ with .Site.Menus.main }}
-    <nav>
-      <ul>
-      {{ range . }}
-        <li><a href="{{ .URL | absURL }}">{{ .Name }}</a></li>
-      {{ end }}
-      </ul>
-    </nav>
-    {{ end }}
-    */}}
+    <h1 id="logo"><span class="light">stream</span><span class="dark">lit</span></h1>
   </header>
 
   {{ partial "quickstart" . }}
