--- a/site/layouts/partials/fonts.html
+++ b/site/layouts/partials/fonts.html
@@ -1,1 +1,1 @@
-<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans+Condensed:300,400|IBM+Plex+Sans:400,700|IBM+Plex+Serif" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=PT+Sans|IBM+Plex+Mono|IBM+Plex+Sans:400,700" rel="stylesheet">
