--- a/site/static/css/main.css
+++ b/site/static/css/main.css
@@ -1,14 +1,3 @@
-/**
- * Palette:
- * - Black: #101620
- * - Gray: #768096
- * - Light gray: #E6E9EF
- * - Ultralight gray: #F0F3F9
- * - Accent red: #F63366
- * - Accent yellow: #FFFD80
- * - Accent blue: #2979E9
- */
-
 html {
   font-family: 'IBM Plex Sans', sans-serif;
   font-size: 2.75vmin;
@@ -32,8 +21,6 @@ main {
   overflow-x: hidden;
   overflow-y: scroll;
   transform-style: preserve-3d;
-  /*
-  */
 }
 
 a {
@@ -65,7 +52,7 @@ header {
   background: none;
   overflow: hidden;
   box-sizing: border-box;
-  padding: 20vh 0;
+  padding: 6rem 0;
 }
 
 header::before {
@@ -75,37 +62,37 @@ header::before {
   right: 0;
   bottom: 0;
   left: 0;
-  transform: translateZ(-1px) scale(3);
+  transform: translateZ(-1px) scale(2.2);
   z-index: -1;
-  background-image: url('../images/sparkle.jpg');
+  background-color: #1c2339;
+  background-image: url('../images/cave.jpg');
   background-size: cover;
-  background-position-x: center;
-  background-position-y: center;
+  background-position-x: 20%;
+  background-position-y: 70%;
   background-repeat: no-repeat;
 }
 
 header h1 {
+  font-family: 'PT Sans', sans-serif;
   font-weight: 800;
   font-size: 9vmin;
+  letter-spacing: 0.01em;
+  /*
   text-shadow: 0 0.05em 0.05em rgba(10, 30, 60, 0.25),
       0 0.05em 0.25em rgba(10, 30, 60, 0.25);
   color: white;
+  */
   width: 60rem;
   max-width: 80vw;
   line-height: 1;
 }
 
-#lede {
-  font-family: 'IBM Plex Sans condensed';
-  font-size: 1.5rem;
-  text-transform: lowercase;
-  font-weight: 100;
-  text-shadow: 0 0.05em 0.05em rgba(10, 30, 60, 0.5),
-      0 0.05em 0.25em rgba(10, 30, 60, 0.5);
+#logo .light {
   color: white;
-  width: 60rem;
-  max-width: 80vw;
-  line-height: 1;
+}
+
+#logo .dark {
+  color: rgba(255, 255, 255, 0.66);
 }
 
 section {
@@ -122,7 +109,7 @@ section {
 
 section.dark {
   color: #fff;
-  background-color: #333;
+  background-color: #1c2339;
   background-image: linear-gradient(0deg, #1c2339, #232949 9rem);
 }
 
