[site] Remove broken parallax when not in Chrome

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -8,4 +8,13 @@
 
   {{ partial "contact" . }}
 </main>
+
+<script>
+  if (navigator.userAgent.toLowerCase().indexOf('chrome') > -1) {
+    var els = document.getElementsByClassName('parallax');
+    for (var i = 0; i < els.length; i++) {
+      els[i].classList.add('chrome');
+    }
+  }
+</script>
 {{ end }}
