--- a/site/static/css/main.css
+++ b/site/static/css/main.css
@@ -71,13 +71,9 @@ header::before {
   background-repeat: no-repeat;
 }
 
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  /* Chrome & Safari CSS hack, since the line below is breaking Firefox */
-  header::before {
-    transform: translateZ(-1px) scale(2.2);
-  }
+header.chrome::before {
+  transform: translateZ(-1px) scale(2.2);
 }
-
 
 header h1 {
   font-family: 'PT Sans', sans-serif;
