--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,10 +1,8 @@
 {{ define "main" }}
-  <span>
+<main id="single">
+  <div class="contents">
     <h1>{{ .Title }}</h1>
-  </span>
-
-  <p>
-      {{ .Content }}
-  </p>
-
+    {{ .Content }}
+  </div>
+</main>
 {{ end }}
