[site] Update site text to mention the demo.

--- a/site/layouts/partials/contact.html
+++ b/site/layouts/partials/contact.html
@@ -1,8 +1,8 @@
 <section id="contact" class="dark">
   <div class="content">
-    <h2>Contact</h2>
+    <h2>Haven't seen the demo?</h2>
     <p>
-      Want to know more? Drop us a note at
+      Contact us at
       <a target="_blank" href="mailto:contact@streamlit.io">hello@streamlit.io</a>
     </p>
   </div>
