--- a/site/layouts/partials/quickstart.html
+++ b/site/layouts/partials/quickstart.html
@@ -1,6 +1,6 @@
 <section id="sneakpeak">
   <div class="content">
-    <h2>Quick start</h2>
+    <h2>Seen the demo?</h2>
     <dl id="example">
       <dt>Install in just seconds</dt>
       <dd>pip install streamlit</dd>
