Update CSS for docs and syntax highlighting

--- a/frontend/src/WebClient.css
+++ b/frontend/src/WebClient.css
@@ -7,6 +7,8 @@
  * - Accent red: #F63366
  * - Accent yellow: #FFFD80
  * - Accent blue: #2979E9
+ * - Accent deep blue: #193999
+ * - Accent green: #199939
  *
  * Text sizes:
  * - Normal: 1rem
