--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -8,6 +8,7 @@
     {{ partial "google_verification" . }}
     {{ partial "google_analytics" . }}
     {{ partial "fonts" . }}
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}fonts/fonts.css" />
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css" />
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css" />
   </head>
