--- a/site/static/css/syntax.css
+++ b/site/static/css/syntax.css
@@ -1,59 +1,59 @@
-/* Background */ .chroma { background-color: #ffffff }
+/* Background */ .chroma { background-color: transparent }
 /* Error */ .chroma .err { color: #ff0000; background-color: #ffaaaa }
 /* LineTableTD */ .chroma .lntd { vertical-align: top; padding: 0; margin: 0; border: 0; }
 /* LineTable */ .chroma .lntable { border-spacing: 0; padding: 0; margin: 0; border: 0; width: auto; overflow: auto; display: block; }
 /* LineHighlight */ .chroma .hl { display: block; width: 100%;background-color: #ffffcc }
 /* LineNumbersTable */ .chroma .lnt { margin-right: 0.4em; padding: 0 0.4em 0 0.4em; }
 /* LineNumbers */ .chroma .ln { margin-right: 0.4em; padding: 0 0.4em 0 0.4em; }
-/* Keyword */ .chroma .k { color: #008800; font-weight: bold }
-/* KeywordConstant */ .chroma .kc { color: #008800; font-weight: bold }
-/* KeywordDeclaration */ .chroma .kd { color: #008800; font-weight: bold }
-/* KeywordNamespace */ .chroma .kn { color: #008800; font-weight: bold }
+/* Keyword */ .chroma .k { color: #F63366; font-weight: bold }
+/* KeywordConstant */ .chroma .kc { color: #F63366; font-weight: bold }
+/* KeywordDeclaration */ .chroma .kd { color: #F63366; font-weight: bold }
+/* KeywordNamespace */ .chroma .kn { color: #F63366; font-weight: bold }
 /* KeywordPseudo */ .chroma .kp { color: #003388; font-weight: bold }
-/* KeywordReserved */ .chroma .kr { color: #008800; font-weight: bold }
+/* KeywordReserved */ .chroma .kr { color: #F63366; font-weight: bold }
 /* KeywordType */ .chroma .kt { color: #333399; font-weight: bold }
 /* NameAttribute */ .chroma .na { color: #0000cc }
-/* NameBuiltin */ .chroma .nb { color: #007020 }
+/* NameBuiltin */ .chroma .nb { color: #101620 }
 /* NameClass */ .chroma .nc { color: #bb0066; font-weight: bold }
 /* NameConstant */ .chroma .no { color: #003366; font-weight: bold }
-/* NameDecorator */ .chroma .nd { color: #555555; font-weight: bold }
+/* NameDecorator */ .chroma .nd { color: #2979E9; font-weight: bold }
 /* NameEntity */ .chroma .ni { color: #880000; font-weight: bold }
 /* NameException */ .chroma .ne { color: #ff0000; font-weight: bold }
-/* NameFunction */ .chroma .nf { color: #0066bb; font-weight: bold }
+/* NameFunction */ .chroma .nf { color: #2979E9; font-weight: bold }
 /* NameLabel */ .chroma .nl { color: #997700; font-weight: bold }
-/* NameNamespace */ .chroma .nn { color: #0e84b5; font-weight: bold }
+/* NameNamespace */ .chroma .nn { color: #2979E9; font-weight: bold }
 /* NameTag */ .chroma .nt { color: #007700 }
 /* NameVariable */ .chroma .nv { color: #996633 }
 /* NameVariableClass */ .chroma .vc { color: #336699 }
 /* NameVariableGlobal */ .chroma .vg { color: #dd7700; font-weight: bold }
 /* NameVariableInstance */ .chroma .vi { color: #3333bb }
-/* LiteralString */ .chroma .s { background-color: #fff0f0 }
-/* LiteralStringAffix */ .chroma .sa { background-color: #fff0f0 }
-/* LiteralStringBacktick */ .chroma .sb { background-color: #fff0f0 }
+/* LiteralString */ .chroma .s { color: #199939 }
+/* LiteralStringAffix */ .chroma .sa { color: #199939 }
+/* LiteralStringBacktick */ .chroma .sb { color: #199939 }
 /* LiteralStringChar */ .chroma .sc { color: #0044dd; background-color: #fff0f0 }
 /* LiteralStringDelimiter */ .chroma .dl { background-color: #fff0f0 }
-/* LiteralStringDoc */ .chroma .sd { color: #dd4422; background-color: #fff0f0 }
-/* LiteralStringDouble */ .chroma .s2 { background-color: #fff0f0 }
-/* LiteralStringEscape */ .chroma .se { color: #666666; background-color: #fff0f0; font-weight: bold }
-/* LiteralStringHeredoc */ .chroma .sh { background-color: #fff0f0 }
-/* LiteralStringInterpol */ .chroma .si { background-color: #eeeeee }
+/* LiteralStringDoc */ .chroma .sd { color: #768096 }
+/* LiteralStringDouble */ .chroma .s2 { color: #768096; font-style: italic }
+/* LiteralStringEscape */ .chroma .se { color: #F63366 }
+/* LiteralStringHeredoc */ .chroma .sh { color: #199939 }
+/* LiteralStringInterpol */ .chroma .si { color: #199939 }
 /* LiteralStringOther */ .chroma .sx { color: #dd2200; background-color: #fff0f0 }
-/* LiteralStringRegex */ .chroma .sr { color: #000000; background-color: #fff0ff }
-/* LiteralStringSingle */ .chroma .s1 { background-color: #fff0f0 }
+/* LiteralStringRegex */ .chroma .sr { color: #101620; background-color: #fff0ff }
+/* LiteralStringSingle */ .chroma .s1 { color: #199939 }
 /* LiteralStringSymbol */ .chroma .ss { color: #aa6600; background-color: #fff0f0 }
-/* LiteralNumber */ .chroma .m { color: #6600ee; font-weight: bold }
-/* LiteralNumberBin */ .chroma .mb { color: #6600ee; font-weight: bold }
-/* LiteralNumberFloat */ .chroma .mf { color: #6600ee; font-weight: bold }
+/* LiteralNumber */ .chroma .m { color: #2949b9; font-weight: bold }
+/* LiteralNumberBin */ .chroma .mb { color: #2949b9; font-weight: bold }
+/* LiteralNumberFloat */ .chroma .mf { color: #2949b9; font-weight: bold }
 /* LiteralNumberHex */ .chroma .mh { color: #005588; font-weight: bold }
-/* LiteralNumberInteger */ .chroma .mi { color: #0000dd; font-weight: bold }
-/* LiteralNumberIntegerLong */ .chroma .il { color: #6600ee; font-weight: bold }
+/* LiteralNumberInteger */ .chroma .mi { color: #2949b9; font-weight: bold }
+/* LiteralNumberIntegerLong */ .chroma .il { color: #2949b9; font-weight: bold }
 /* LiteralNumberOct */ .chroma .mo { color: #4400ee; font-weight: bold }
-/* Operator */ .chroma .o { color: #333333 }
-/* OperatorWord */ .chroma .ow { color: #000000; font-weight: bold }
-/* Comment */ .chroma .c { color: #888888 }
-/* CommentHashbang */ .chroma .ch { color: #888888 }
-/* CommentMultiline */ .chroma .cm { color: #888888 }
-/* CommentSingle */ .chroma .c1 { color: #888888 }
+/* Operator */ .chroma .o { color: #101620 }
+/* OperatorWord */ .chroma .ow { color: #F63366; font-weight: bold }
+/* Comment */ .chroma .c { color: #768096; font-style: italic }
+/* CommentHashbang */ .chroma .ch { color: #768096; font-style: italic }
+/* CommentMultiline */ .chroma .cm { color: #768096; font-style: italic }
+/* CommentSingle */ .chroma .c1 { color: #768096; font-style: italic }
 /* CommentSpecial */ .chroma .cs { color: #cc0000; font-weight: bold }
 /* CommentPreproc */ .chroma .cp { color: #557799 }
 /* CommentPreprocFile */ .chroma .cpf { color: #557799 }
@@ -62,7 +62,7 @@
 /* GenericError */ .chroma .gr { color: #ff0000 }
 /* GenericHeading */ .chroma .gh { color: #000080; font-weight: bold }
 /* GenericInserted */ .chroma .gi { color: #00a000 }
-/* GenericOutput */ .chroma .go { color: #888888 }
+/* GenericOutput */ .chroma .go { color: #768096 }
 /* GenericPrompt */ .chroma .gp { color: #c65d09; font-weight: bold }
 /* GenericStrong */ .chroma .gs { font-weight: bold }
 /* GenericSubheading */ .chroma .gu { color: #800080; font-weight: bold }
