--- a/site/layouts/partials/quickstart.html
+++ b/site/layouts/partials/quickstart.html
@@ -1,4 +1,4 @@
-<section id="sneakpeak">
+<section id="quickstart">
   <div class="content">
     <h2>Seen the demo?</h2>
     <dl id="example">
@@ -8,5 +8,6 @@
       <dt>Check out some examples</dt>
       <dd>python -m streamlit help</dd>
     </dl>
+    <p>For more information, refer to our <a href="/docs">docs</a>.</p>
   </div>
 </section>
