Updated a bunch of docs and stuff to get rid of python -m streamlit blah.

--- a/site/layouts/partials/quickstart.html
+++ b/site/layouts/partials/quickstart.html
@@ -6,7 +6,7 @@
       <dd>pip install streamlit</dd>
 
       <dt>Check out some examples</dt>
-      <dd>python -m streamlit help</dd>
+      <dd>streamlit help</dd>
     </dl>
     <p>For more information, refer to our <a href="/docs">docs</a>.</p>
   </div>
