Remove "seen the demo?" section from site

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -4,7 +4,7 @@
     <h1 class="logo"><strong>stream</strong><span>lit</span></h1>
   </section>
 
-  {{ partial "quickstart" . }}
+  {{/* partial "quickstart" . */}}
   {{ partial "contact" . }}
 </main>
 
