--- a/site/static/css/main.css
+++ b/site/static/css/main.css
@@ -274,7 +274,7 @@ html.kind-home {
   margin: 0 0 1rem 0;
 }
 
-#home #quickstart {
+#home #contact {
   background-image: linear-gradient(180deg, #ecf6ff, #fff 5rem);
 }
 
