Make the error pointer red. Used to be gray, which looked really weird inside a red outer box.

--- a/frontend/src/elements/Text.css
+++ b/frontend/src/elements/Text.css
@@ -64,11 +64,13 @@
   background: #f6f9fa;
 }
 
+/* This is used to point to the specific part of the pre.error that
+   caused an error. */
 .streamlit-container .json-text-container span.error {
   padding: 0.2em 0.4em;
   margin: 0;
-  background-color: #E6E9EE;
-  border-radius: 3px;
+  background-color: #df616d60;
+  border-bottom: 1px dashed #df616d;
 }
 
 .streamlit-container .json-text-container pre.error {
